Modified structure and basic css, far from finish yet

--- a/index.html
+++ b/index.html
@@ -8,14 +8,79 @@
     <title>Blog - Make it real</title>
 </head>
 <body>
-    <header>
-        header
+    <header class="header">
+        <nav class="main-menu">
+            <div class="language">
+                English
+            </div>
+            <div class="menu">
+                <div class="line line1"></div>
+                <div class="line line2"></div>
+                <div class="line line3"></div>
+            </div>
+        </nav>
     </header>
-    <main>
-        main
+    <main class="main-content">
+        <div class="presentation">
+            <div class="presentation-img">
+                <img class="img-diagonal-lines" src="img/img-diagonal-lines.png" alt="diagonal-lines">
+                <img class="img-main" src="img/img-main.png" alt="main">
+            </div>
+            <div class="presentation-title">
+                <h1>Hello <img src="img/img-waving-hand.png" alt="waving-hand"><br>I'm Felipe Zuluaga <br>a Fullstack Developer</h1>
+                <p>Scroll down <img src="img/vector-little-arrow.png" alt="little-arrow"></p>
+            </div>
+        </div>
+        <div class="about">
+            <div class="about-title">
+                <h2>About me</h2>
+                <div class="general-line about-line"></div>
+            </div>
+            <div class="about-text">
+                <p>I’m currently working as a freelance <strong>fullstack developer and UI/UX designer.</strong> I enjoy building web apps using <span class="general-span"><img src="img/logo-tailwindcss-color.png" alt=""> TailwindCSS </span> and <span class="general-span"><img src="img/logo-react-color.png" alt=""> React </span> I'm also an active student in University of AMIKOM Yogyakarta.</p>
+            </div>
+            <div class="about-button">
+                <button class="general-button button-resume">Download Resume</button>
+            </div>
+        </div>
+        <div class="project">
+            <h2>Projects</h2>
+            <div class="box-project box-project1">Use pagination</div>
+            <div class="box-project box-project2">larareactia</div>
+            <div class="box-project box-project3">Overflow</div>
+            <div class="box-project box-project4">kos-manager</div>
+            <div class="box-project box-project5">Nix</div>
+            <div class="box-project box-project5">flexbox-tutorial</div>
+            <button class="general-button button-see-more">See more</button>
+        </div>
+        <div class="blogs">
+            <h2>Blogs</h2>
+            <button class="general-button button-more-articles">More articles</button>
+            <p><strong>Design Systems con ReactJS y Storybook</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, esse fuga doloremque consectetur incidunt non rerum facilis.</p>
+            <p><strong>Enchulame la terminal - Mac</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, esse fuga doloremque consectetur incidunt non rerum facilis.</p>
+            <p><strong>HEADLESS CMS La mejor solución para ...</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, esse fuga doloremque consectetur incidunt non rerum facilis.</p>
+            <p><strong>Testing framework - Node.js</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, esse fuga doloremque consectetur incidunt non rerum facilis.</p>
+        </div>
+        <div class="skills">
+            <h2>Skills</h2>
+            <p>I’ve spent about two years on improving my skills in website development using <span class="general-span"><img src="img/logo-php.png" alt="logo-php"> PHP </span> and <span class="general-span"><img src="img/logo-js.png" alt="logo-js"> Javascript </span>that I’m now pretty confident in building apps using these tools:</p>
+            <div class="skills-img">      
+                <img src="img/logo-1.png" alt="logo1">
+                <img src="img/logo-2.png" alt="logo2">
+                <img src="img/logo-3.png" alt="logo3"><br>
+                <img src="img/logo-4.png" alt="logo4">
+                <img src="img/logo-5.png" alt="logo5">
+                <img src="img/logo-6.png" alt="logo6">
+                <img src="img/logo-7.png" alt="logo7">
+            </div>
+        </div>
     </main>
     <footer>
-        footer
+        <p>Get in touch <img src="img/vector-hand.png" alt="hand"></p>
+        <p>me@me.com</p>
+        <div class="box-fb"></div>
+        <div class="box-tw"></div>
+        <div class="box-insta"></div>
     </footer>
 </body>
 </html>
