Slight changes in the css code, it isn't finish yet

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </nav>
     </header>
     <main class="main-content">
-        <div class="presentation">
-            <div class="presentation-img">
-                <img class="img-diagonal-lines" src="img/img-diagonal-lines.png" alt="diagonal-lines">
-                <img class="img-main" src="img/img-main.png" alt="main">
+        <div class="general-container presentation">
+            <div class="presentation-division">
+                <div class="img-diagonal-lines"></div>
+                <div class="img-main"></div>
             </div>
-            <div class="presentation-title">
+            <div class="presentation-division">
                 <h1>Hello <img src="img/img-waving-hand.png" alt="waving-hand"><br>I'm Felipe Zuluaga <br>a Fullstack Developer</h1>
                 <p>Scroll down <img src="img/vector-little-arrow.png" alt="little-arrow"></p>
             </div>
@@ -36,7 +36,7 @@
         <div class="general-container about">
             <div class="about-title">
                 <h2>About me</h2>
-                <div class="general-line about-line"></div>
+                <span class="general-line about-line"></span>
             </div>
             <div class="about-text">
                 <p>I’m currently working as a freelance <strong>fullstack developer</strong> and <strong>UI/UX designer.</strong> I enjoy building web apps using <span class="general-span"><img src="img/logo-tailwindcss-color.png" alt=""> TailwindCSS </span> and <span class="general-span"><img src="img/logo-react-color.png" alt=""> React </span> I'm also an active student in University of AMIKOM Yogyakarta.</p>
@@ -53,37 +53,37 @@
             <img class="img-top" src="img/img-circles.png" alt="circles">
             <img class="img-botton" src="img/img-circles.png" alt="circles">
             <div class="project-boxes">
-                <div class="project-box box-project1">
+                <div class="project-box box-project-img-top">
                     <h3>Use pagination</h3>
                     <p>Simple client side pagination hooks for react.</p>
                     <img src="img/logo-cat.png" alt="logo-git">
                     <a href="#">Details</a>
                 </div>
-                <div class="project-box box-project2">
+                <div class="project-box">
                     <h3>larareactia</h3>
                     <p>Laravel SPA + React + Inertia.js + TailwindCSS starter template with authentication. */</p>
                     <img src="img/logo-cat.png" alt="logo-git">
                     <a href="#">Details</a>
                 </div>
-                <div class="project-box box-project3">
+                <div class="project-box">
                     <h3>Overflow</h3>
                     <p>TailwindCSS Admin Dashboard Template.</p>
                     <img src="img/logo-pink.png" alt="logo-git">
                     <a href="#">Details</a>
                 </div>
-                <div class="project-box box-project4">
+                <div class="project-box">
                     <h3>kos-manager</h3>
                     <p>Lodgement management application. Developed with Laravel, Inertiajs, and React.</p>
                     <img src="img/logo-cat.png" alt="logo-git">
                     <a href="#">Details</a>
                 </div>
-                <div class="project-box box-project5">
+                <div class="project-box">
                     <h3>Nix</h3>
                     <p>TailwindCSS Landing Page Template</p>
                     <img src="img/logo-pink.png" alt="logo-git">
                     <a href="#">Details</a>
                 </div>
-                <div class="project-box box-project6">
+                <div class="project-box">
                     <h3>flexbox-tutorial</h3>
                     <p>CSS layouting using flexbox tutorial</p>
                     <img src="img/logo-cat.png" alt="logo-git">
