--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                 <div class="img-diagonal-lines"></div>
                 <div class="img-main"></div>
             </div>
-            <div class="presentation-division">
-                <h1>Hello <img src="img/img-waving-hand.png" alt="waving-hand"><br>I'm Felipe Zuluaga <br>a Fullstack Developer</h1>
+            <div class="presentation-division presentation-title">
+                <h1>Hello <img src="img/img-waving-hand.png" alt="waving-hand"><br>I'm Daniela Calle <br>a Fullstack Developer</h1>
+                <div class="presentation-subline"></div>
                 <p>Scroll down <img src="img/vector-little-arrow.png" alt="little-arrow"></p>
             </div>
         </div>
@@ -42,7 +43,7 @@
                 <p>I’m currently working as a freelance <strong>fullstack developer</strong> and <strong>UI/UX designer.</strong> I enjoy building web apps using <span class="general-span"><img src="img/logo-tailwindcss-color.png" alt=""> TailwindCSS </span> and <span class="general-span"><img src="img/logo-react-color.png" alt=""> React </span> I'm also an active student in University of AMIKOM Yogyakarta.</p>
             </div>
             <div class="about-button">
-                <button class="general-button button-resume">Download Resume</button>
+                <button class="general-button about-button-resumen">Download Resume</button>
             </div>
         </div>
         <div class="general-container project">
@@ -141,9 +142,10 @@
         <div class="general-container">
             <p class="footer-msj">Get in touch <img src="img/vector-hand.png" alt="hand"></p>
             <p class="footer-email">me@me.com</p>
-            <div class="footer-logo footer-fb"><img src="img/vector-fb.png" alt="fb"></div>
-            <div class="footer-logo footer-tw"><img src="img/vector-twitter.png" alt="fb"></div>
-            <div class="footer-logo footer-insta"><img src="img/vector-insta.png" alt="fb"></div>
+            <div class="footer-subline"></div>
+            <div class="footer-logo footer-fb"></div>
+            <div class="footer-logo footer-tw"></div>
+            <div class="footer-logo footer-insta"></div>
         </div>
     </footer>
 </body>
