change the email

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <footer>
         <div class="general-container">
             <p class="footer-msj">Get in touch <img src="img/vector-hand.png" alt="hand"></p>
-            <p class="footer-email">me@me.com</p>
+            <p class="footer-email">dany0913@hotmail.com</p>
             <div class="footer-subline"></div>
             <div class="footer-logo footer-fb"></div>
             <div class="footer-logo footer-tw"></div>
