Last changes, still the arrow not working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 <body>
     <nav class="nav">
         <div class="nav-language">           
-            <button id="btnDropdown" class="nav-button">English</button>
+            <button id="btnDropdown" class="nav-button">
+                English
+                <svg
+                    class="w-4 h-4 ml-2 transition-transform transform rotate-180"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke = "currentColor"
+                >
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                </svg>
+            </button>
             <!-- <img src="img/vector-little-arrow-nav.png" alt="little-arrow"> -->
                 <div class="nav-dropdown-content">
                     <a href="#">English</a>
