--- a/index.html
+++ b/index.html
@@ -21,67 +21,120 @@
           width="40"
           height="35"
         >
-          <rect width="100" height="15"></rect>
-          <rect y="30" width="100" height="15"></rect>
-          <rect y="60" width="100" height="15"></rect>
+          <rect width="100" height="15" rx="8"></rect>
+          <rect y="30" width="100" height="15" rx="8"></rect>
+          <rect y="60" width="100" height="15" rx="8"></rect>
         </svg>
 
         <nav class="header-nav">
           <div class="header-nav-div-item">About me</div>
-          <div class="header-nav-div-item">Projects</div>
           <div class="header-nav-div-item">Skills</div>
+          <div class="header-nav-div-item">Projects</div>
           <div class="header-nav-div-item">Blog</div>
         </nav>
       </div>
     </header>
+
     <main class="main">
-      <header class="general-container presentation">
-        <div class="presentation-division">
-          <div class="img-diagonal-lines"></div>
-          <div class="img-main"></div>
-        </div>
-        <div class="presentation-division presentation-title">
-          <h1>
-            Hello
-            <img src="img/img-waving-hand.png" alt="waving-hand" /><br />I'm
-            Daniela Calle <br />a
-            <span class="presentation-underline">Fullstack Developer</span>
-          </h1>
-          <div class="presentation-subline"></div>
-          <p>
-            Scroll down
-            <img src="img/vector-little-arrow.png" alt="little-arrow" />
-          </p>
-        </div>
-      </header>
-      <div class="general-container about">
-        <div class="about-title">
-          <h2>About me</h2>
-          <div class="general-line about-line"></div>
-        </div>
-        <div class="about-text-container">
-          <div class="about-text">
+      <!-- Section: About me -->
+      <section class="about">
+        <div class="about-presentation">
+          <div class="about-img"></div>
+          <div>
+            <h1>
+              Hello, I'm <span>Daniela Calle</span>.<br />
+              I'm a <strong>Systems Engineer</strong> and <br />
+              <strong>Fullstack Developer</strong> in formation
+            </h1>
             <p>
-              I’m currently working as a freelance
-              <strong>fullstack developer</strong> and
-              <strong>UI/UX designer.</strong> I enjoy building web apps using
-              <span class="general-span"
-                ><img src="img/logo-tailwindcss-color.png" alt="" /> TailwindCSS
-              </span>
-              and
-              <span class="general-span"
-                ><img src="img/logo-react-color.png" alt="" /> React
-              </span>
-              I'm also an active student in University of AMIKOM Yogyakarta.
+              Scroll down
+              <img src="img/vector-little-arrow.png" alt="little-arrow" />
             </p>
           </div>
-          <div class="about-button">
-            <button class="general-button about-button-resumen">
-              Download Resume
-            </button>
+          <div class="about-detail">
+            <div class="main-title">
+              <h2>About me</h2>
+              <svg viewBox="0 0 200 80" width="80" height="30">
+                <rect width="200" height="10" rx="8"></rect>
+              </svg>
+            </div>
+            <div class="about-habilities">
+              <div class="about-habily">
+                <img src="img/icon-fast.png" alt="quick" />
+                <h3>Quick lerner</h3>
+              </div>
+              <div class="about-habily">
+                <img src="img/icon-team.png" alt="team" />
+                <h3>Love team work</h3>
+              </div>
+              <div class="about-habily">
+                <img src="img/icon-idea.png" alt="idea" />
+                <h3>Work smarter, no harder</h3>
+              </div>
+              <div class="about-habily">
+                <img src="img/icon-responsive.png" alt="best-fit" />
+                <h3>Responsive</h3>
+              </div>
+            </div>
+            <div class="about-text">
+              <p>
+                I'm currently working as IT Risk Senior and as freelance
+                <strong>fullstack developer</strong>. I really enjoy learning
+                new things everyday, I'm currently buinding web apps using
+                <span><img src="img/logo-html.png" alt="" /> HTML</span>,
+                <span><img src="img/logo-css.png" alt="" /> CSS</span>,
+                <span><img src="img/logo-js.png" alt="" /> Javascript</span>,
+                <span><img src="img/logo-react.png" alt="" /> React</span>,
+                <span><img src="img/logo-nodejs.png" alt="" /> NodeJS</span>,
+                and almost in anything that I need to learn, I'm very versatile.
+              </p>
+            </div>
           </div>
         </div>
+      </section>
+
+      <!-- Section: Skills-->
+      <section>
+        <div class="main-title">
+          <h2>Skills</h2>
+          <svg viewBox="0 0 200 80" width="80" height="30">
+            <rect width="200" height="10" rx="8"></rect>
+          </svg>
+        </div>
+        <p>
+          I've working the last year improving my skills in website development,
+          using different languages and frameworks. The tools which I enjoy the
+          most are the following ones:
+        </p>
+      </section>
+
+      <div class="general-container skills">
+        <h2>Skills</h2>
+        <div class="skills-title">
+          <div class="general-line center-line"></div>
+        </div>
+        <p>
+          I’ve spent about two years on improving my skills in website
+          development using
+          <span class="general-span"
+            ><img src="img/logo-php.png" alt="logo-php" /> PHP
+          </span>
+          and
+          <span class="general-span"
+            ><img src="img/logo-js.png" alt="logo-js" /> Javascript </span
+          >that I’m now pretty confident in building apps using these tools:
+        </p>
+        <div class="skills-img">
+          <img src="img/logo-1.png" alt="logo1" />
+          <img src="img/logo-2.png" alt="logo2" />
+          <img src="img/logo-3.png" alt="logo3" /><br />
+          <img src="img/logo-4.png" alt="logo4" />
+          <img src="img/logo-5.png" alt="logo5" />
+          <img src="img/logo-6.png" alt="logo6" />
+          <img src="img/logo-7.png" alt="logo7" />
+        </div>
       </div>
+
       <div class="general-container project">
         <h2>Projects</h2>
         <div class="project-title">
@@ -175,33 +228,6 @@
               facilis..
             </p>
           </div>
-        </div>
-      </div>
-
-      <div class="general-container skills">
-        <h2>Skills</h2>
-        <div class="skills-title">
-          <div class="general-line center-line"></div>
-        </div>
-        <p>
-          I’ve spent about two years on improving my skills in website
-          development using
-          <span class="general-span"
-            ><img src="img/logo-php.png" alt="logo-php" /> PHP
-          </span>
-          and
-          <span class="general-span"
-            ><img src="img/logo-js.png" alt="logo-js" /> Javascript </span
-          >that I’m now pretty confident in building apps using these tools:
-        </p>
-        <div class="skills-img">
-          <img src="img/logo-1.png" alt="logo1" />
-          <img src="img/logo-2.png" alt="logo2" />
-          <img src="img/logo-3.png" alt="logo3" /><br />
-          <img src="img/logo-4.png" alt="logo4" />
-          <img src="img/logo-5.png" alt="logo5" />
-          <img src="img/logo-6.png" alt="logo6" />
-          <img src="img/logo-7.png" alt="logo7" />
         </div>
       </div>
     </main>
