--- a/index.html
+++ b/index.html
@@ -106,42 +106,28 @@
           using different languages and frameworks. The tools which I enjoy the
           most are the following ones:
         </p>
+        <div class="skills-imgs">
+          <img src="img/logo-js-bigger.png" alt="logo-js" />
+          <img src="img/logo-html-bigger.png" alt="logo-html" />
+          <img src="img/logo-css-bigger.png" alt="logo-css" />
+          <img src="img/logo-bootstrap.png" alt="logo-boostrap" />
+          <img src="img/logo-react-bigger.png" alt="logo-react" />
+          <img src="img/logo-redux.png" alt="logo-redux" />
+          <img src="img/logo-next-js.png" alt="logo-next-js" />
+        </div>
       </section>
 
-      <div class="general-container skills">
-        <h2>Skills</h2>
-        <div class="skills-title">
-          <div class="general-line center-line"></div>
+      <!-- Section: Projects -->
+      <section>
+        <div class="main-title">
+          <h2>Projects</h2>
+          <svg viewBox="0 0 200 80" width="80" height="30">
+            <rect width="200" height="10" rx="8"></rect>
+          </svg>
         </div>
-        <p>
-          I’ve spent about two years on improving my skills in website
-          development using
-          <span class="general-span"
-            ><img src="img/logo-php.png" alt="logo-php" /> PHP
-          </span>
-          and
-          <span class="general-span"
-            ><img src="img/logo-js.png" alt="logo-js" /> Javascript </span
-          >that I’m now pretty confident in building apps using these tools:
-        </p>
-        <div class="skills-img">
-          <img src="img/logo-1.png" alt="logo1" />
-          <img src="img/logo-2.png" alt="logo2" />
-          <img src="img/logo-3.png" alt="logo3" /><br />
-          <img src="img/logo-4.png" alt="logo4" />
-          <img src="img/logo-5.png" alt="logo5" />
-          <img src="img/logo-6.png" alt="logo6" />
-          <img src="img/logo-7.png" alt="logo7" />
-        </div>
-      </div>
+      </section>
 
       <div class="general-container project">
-        <h2>Projects</h2>
-        <div class="project-title">
-          <div class="general-line center-line"></div>
-        </div>
-        <!-- <img class="img-top" src="img/img-circles.png" alt="circles">
-            <img class="img-botton" src="img/img-circles.png" alt="circles"> -->
         <div class="project-boxes">
           <div class="project-box box-project-img-top">
             <h3>Use pagination</h3>
