CSS funcional, still missing information

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- <link rel="stylesheet" href="css/main-styles.css" /> -->
     <link rel="stylesheet" href="css/index.css" />
     <title>Daniela Calle</title>
@@ -125,29 +130,27 @@
             <rect width="200" height="10" rx="8"></rect>
           </svg>
         </div>
-      </section>
-
-      <div class="general-container project">
         <div class="project-boxes">
           <div class="project-box box-project-img-top">
-            <h3>Use pagination</h3>
-            <p>Simple client side pagination hooks for react.</p>
-            <img src="img/logo-cat.png" alt="logo-git" />
-            <a href="#">Details</a>
+            <h3>My portfolio</h3>
+            <p>
+              This is one of my codign projects, using HTML, CSS and Javascript.
+            </p>
+            <i class="fa fa-github"></i>
+            <a href="https://github.com/Dany0913/web-page" target="_blank"
+              >Details</a
+            >
           </div>
           <div class="project-box">
-            <h3>larareactia</h3>
-            <p>
-              Laravel SPA + React + Inertia.js + TailwindCSS starter template
-              with authentication. */
-            </p>
-            <img src="img/logo-cat.png" alt="logo-git" />
-            <a href="#">Details</a>
+            <h3>Ricky and Morty API</h3>
+            <p>Code in react using the Ricky and Morty API</p>
+            <i class="fa fa-github"></i>
+            <a href="#" target="_blank">Details</a>
           </div>
           <div class="project-box">
             <h3>Overflow</h3>
             <p>TailwindCSS Admin Dashboard Template.</p>
-            <img src="img/logo-pink.png" alt="logo-git" />
+            <i class="fa fa-github"></i>
             <a href="#">Details</a>
           </div>
           <div class="project-box">
@@ -156,34 +159,39 @@
               Lodgement management application. Developed with Laravel,
               Inertiajs, and React.
             </p>
-            <img src="img/logo-cat.png" alt="logo-git" />
+            <i class="fa fa-github"></i>
             <a href="#">Details</a>
           </div>
           <div class="project-box">
             <h3>Nix</h3>
             <p>TailwindCSS Landing Page Template</p>
-            <img src="img/logo-pink.png" alt="logo-git" />
+            <i class="fa fa-github"></i>
             <a href="#">Details</a>
           </div>
           <div class="project-box">
             <h3>flexbox-tutorial</h3>
             <p>CSS layouting using flexbox tutorial</p>
-            <img src="img/logo-cat.png" alt="logo-git" />
+            <i class="fa fa-github"></i>
             <a href="#">Details</a>
           </div>
         </div>
-        <button class="general-button project-button">See more</button>
-      </div>
+      </section>
 
-      <div class="general-container blog">
-        <div class="blog-title">
-          <h2>Blogs</h2>
-          <div class="general-line blog-line"></div>
+      <!-- Section: Blog -->
+      <section>
+        <div class="main-title">
+          <h2>Blog</h2>
+          <svg viewBox="0 0 200 80" width="80" height="30">
+            <rect width="200" height="10" rx="8"></rect>
+          </svg>
         </div>
-        <button class="general-button blog-button">More articles</button>
+        <p>
+          Some information from different sources that help me to my learning
+          and improving process:
+        </p>
         <div class="blog-boxes">
           <div class="blog-box">
-            <h3>Design Systems con ReactJS y Storybook</h3>
+            <h3>Git baby steps</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Inventore, esse fuga doloremque consectetur incidunt non rerum
@@ -215,21 +223,44 @@
             </p>
           </div>
         </div>
-      </div>
+      </section>
     </main>
+
     <footer class="footer">
-      <div class="general-container">
-        <div class="footer-msj-container">
-          <p class="footer-msj">
-            Get in touch <img src="img/vector-hand.png" alt="hand" />
-          </p>
-          <p class="footer-email">dany0913@hotmail.com</p>
-          <div class="footer-subline"></div>
-        </div>
-        <div class="footer-logo-container">
-          <div class="footer-logo footer-fb"></div>
-          <div class="footer-logo footer-tw"></div>
-          <div class="footer-logo footer-insta"></div>
+      <div class="footer-container">
+        <p class="footer-email">
+          <i class="fa fa-envelope"></i>dany0913@hotmail.com
+        </p>
+        <div class="footer-subline"></div>
+
+        <ul class="footer-logos-container">
+          <li>
+            <a
+              href="https://www.linkedin.com/in/daniela-calle-estrada-506767148/"
+              target="_blank"
+              ><i class="fa fa-linkedin"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/danielacallee/" target="_blank"
+              ><i class="fa fa-instagram"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/DanielaCalleE/" target="_blank"
+              ><i class="fa fa-facebook-f"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/DanielaCalleE" target="_blank"
+              ><i class="fa fa-twitter"></i
+            ></a>
+          </li>
+        </ul>
+
+        <div class="footer-name">
+          Daniela Calle
+          <span>©2021</span>
         </div>
       </div>
     </footer>
