--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         </svg>
 
         <nav class="header-nav">
-          <div class="header-nav-div-item">About me</div>
-          <div class="header-nav-div-item">Skills</div>
-          <div class="header-nav-div-item">Projects</div>
-          <div class="header-nav-div-item">Blog</div>
+          <a class="header-nav-item" href="#about">About me</a>
+          <a class="header-nav-item" href="#skills">Skills</a>
+          <a class="header-nav-item" href="#projects">Projects</a>
+          <a class="header-nav-item" href="#blog">Blog</a>
         </nav>
       </div>
     </header>
 
     <main class="main">
       <!-- Section: About me -->
-      <section class="about">
+      <section id="about" class="about">
         <div class="about-presentation">
           <div class="about-img"></div>
           <div>
@@ -99,7 +99,7 @@
       </section>
 
       <!-- Section: Skills-->
-      <section>
+      <section id="skills">
         <div class="main-title">
           <h2>Skills</h2>
           <svg viewBox="0 0 200 80" width="80" height="30">
@@ -123,7 +123,7 @@
       </section>
 
       <!-- Section: Projects -->
-      <section>
+      <section id="projects">
         <div class="main-title">
           <h2>Projects</h2>
           <svg viewBox="0 0 200 80" width="80" height="30">
@@ -178,7 +178,7 @@
       </section>
 
       <!-- Section: Blog -->
-      <section>
+      <section id="blog">
         <div class="main-title">
           <h2>Blog</h2>
           <svg viewBox="0 0 200 80" width="80" height="30">
