Nav pointer changed and tiny writing error corrected

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="about-habilities">
               <div class="about-habily">
                 <img src="img/icon-fast.png" alt="quick" />
-                <h3>Quick lerner</h3>
+                <h3>Quick learner</h3>
               </div>
               <div class="about-habily">
                 <img src="img/icon-team.png" alt="team" />
